--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Adi-2505.github.io/weather-app.github.io",
+  "homepage": "https://Adi-2505.github.io/weather-app",
   "name": "weather2",
   "version": "0.1.0",
   "private": true,
